--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "port": "8080",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -12,6 +13,7 @@
     "less-loader": "^11.1.3",
     "path": "^0.12.7",
     "pinia": "^2.0.33",
+    "seemly": "^0.3.8",
     "vue": "^3.2.37",
     "vue-router": "^4.2.3"
   },
